--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.js --trace-warnings"
+    "dev": "nodemon server.js --trace-warnings",
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
