--- a/api/package.json
+++ b/api/package.json
@@ -16,9 +16,12 @@
     "express-jwt": "^6.1.0",
     "mongoose": "^6.0.13",
     "mongoose-unique-validator": "^3.0.0",
-    "nodemon": "^2.0.15",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "slug": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
